fix logo in dark mode

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -528,16 +528,21 @@ body.dark .sidebar-menu {
     border-right: 1px solid rgb(51, 51, 51) !important;
 }
 
+body.dark .sidebar-menu .logo-env .logo a {
+    color: white !important;
+}
+
+
 body.dark .sidebar-menu .main-menu a {
     color: rgb(153, 153, 153) !important;
 }
 
 body.dark .sidebar-menu .main-menu a:hover {
-    color: rgb(204, 204, 204) !important;
+    color: white !important;
 }
 
 body.dark .sidebar-menu .main-menu li.active > a {
-    color: rgb(204, 204, 204) !important;
+    color: white !important;
 }
 
 body.dark footer.main-footer {
