--- a/assets/css/xenon-core.css
+++ b/assets/css/xenon-core.css
@@ -1160,18 +1160,30 @@ html, body {
 }
 
 .sidebar-menu .logo-env {
-    padding: 50px 40px 30px;
+    padding: 50px 40px 10px 40px; /* Adjust padding as needed */
     display: flex; 
     justify-content: center; 
     align-items: center; 
 }
 
 .sidebar-menu .logo-env .logo {
-    float: left;
+    display: flex;
+    align-items: center;
 }
 
-.sidebar-menu .logo-env .logo .logo-collapsed {
-    display: none;
+.sidebar-menu .logo-env .logo .logo_size {
+    width: 16%; /* Adjust width as needed */
+    height: auto; /* Maintain aspect ratio */
+    margin: 0 3px; /* Add space between text and image */
+}
+
+.sidebar-menu .logo-env .logo a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 16px; /* Adjust font size as needed */
+    font-weight: bold;
+    display: flex;
+    align-items: center;
 }
 
 .sidebar-menu .logo-env .settings-icon {
